# Burgers-Equation

Sequential/: CMakeLists.txt
Sequential/include/: burger.h
Sequential/plotting/: analysis.py  animate_shock.py
Sequential/src/: burger.c
Serial/: project1.c
Serial/plotting/: Project-1.ipynb  plots.py
Serial/src/: burger_root.C  main.c  test.c
